# stegano-rs

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  cliff.toml  codecov.yml  deny.toml
.cargo/: config.toml
.ci/post-build/: coverage.sh  publish-docs.sh
.deb/: Dockerfile  Makefile
.github/: dependabot.yml
.github/workflows/: build.yml  cd.yml  deploy.yml  release-binary-assets.yml  release-pr.yml  release-test.yml  release.yml  release.yml.bak
benches/: byte_reader_benchmark.rs
core/: Cargo.toml
core/src/: lib.rs
core/tests/: core_test.rs
crates/stegano-cli/: CHANGELOG.md  Cargo.toml
crates/stegano-cli/src/: cli.rs  main.rs
crates/stegano-cli/src/commands/: hide.rs  mod.rs  unveil.rs  unveil_raw.rs
crates/stegano-core/: CHANGELOG.md  Cargo.toml  README.md
crates/stegano-core/benches/audio/: decoding.rs  encoding.rs
crates/stegano-core/benches/image/: decoding.rs  encoding.rs
crates/stegano-core/docs/: encoding.md
crates/stegano-core/src/: commands.rs  decipher.rs  error.rs  lib.rs  message.rs  raw_message.rs  universal_decoder.rs  universal_encoder.rs
crates/stegano-core/src/api/: hide.rs  mod.rs  unveil.rs  unveil_raw.rs
crates/stegano-core/src/api/shared/: mod.rs  password.rs
crates/stegano-core/src/commands/: hide.rs  mod.rs  unveil.rs  unveil_raw.rs
crates/stegano-core/src/media/: codec_options.rs  mod.rs  primitives.rs  types.rs
crates/stegano-core/src/media/audio/: lsb_codec.rs  mod.rs  wav_iter.rs
crates/stegano-core/src/media/image/: decoder.rs  encoder.rs  f5_decoder.rs  lsb_codec.rs  mod.rs
crates/stegano-core/src/media/payload/: codec.rs  crypted.rs  factory.rs  legacy.rs  mod.rs
crates/stegano-core/tests/: bit_iterator.rs  bit_iterator_spec.rs  ensure_old_formats_work.rs
crates/stegano-core/tests/images/raw/: HelloWorld_no_passwd_v2.x.xxd  HelloWorld_no_passwd_with_attachment_v2.x.xxd
crates/stegano-f5/: Cargo.toml  README.md
crates/stegano-f5/examples/: hide.rs  unveil.rs
crates/stegano-f5/src/: decoder.rs  encoder.rs  error.rs  jpeg.rs  jpeg_ops.rs  lib.rs  matrix.rs  permutation.rs  quality.rs
crates/stegano-f5/src/jpeg/: huffman.rs  marker.rs  mod.rs  parser.rs  writer.rs
crates/stegano-f5/src/jpeg/scan/: baseline.rs  mod.rs
crates/stegano-inspect/: Cargo.toml  README.md
crates/stegano-inspect/src/: main.rs
crates/stegano-inspect/tests/: introspection.rs
crates/stegano-seasmoke/: CHANGELOG.md  Cargo.toml
crates/stegano-seasmoke/src/: error.rs  ffi.rs  ffi_utils.rs  lib.rs
crates/stegano-wasm/: Cargo.toml
crates/stegano-wasm/src/: lib.rs
doc/: BENCHMARKS.md
docs/: encoding.md  f5-architecture.md
docs/plans/: 2026-02-20-modernize-release-ci-design.md  2026-02-20-modernize-release-ci.md
resources/f5/: Gl64xqTbYAIhRHR.quanization  tryout.quanization
resources/raw/: HelloWorld_with_passwd_v2.x.xxd  HelloWorld_with_passwd_with_attachment_v2.x.xxd
resources/secrets/: Blah.txt
snap/: snapcraft.yaml
src/: bit_iterator.rs  byte_reader.rs  codec.rs  content.rs  decoder.rs  decoder_v2.rs  decoder_v3.rs  filter_reader.rs  lib.rs  lsb_codec.rs  main  main.rs  message.rs  raw_message.rs
stegano-cli/: Cargo.toml  README.md
stegano-cli/src/: main.rs
stegano-core/: Cargo.toml  README.md
stegano-core/benches/: audio_benchmarks.rs  byte_reader_benchmark.rs  decoder_benchmark.rs  encoder_benchmark.rs  image_benchmarks.rs
stegano-core/benches/audio/: encoding.rs
stegano-core/benches/image/: encoding.rs
stegano-core/src/: bit_iterator.rs  commands.rs  decipher.rs  decoder.rs  encoder.rs  error.rs  lib.rs  lsb.rs  lsb_codec.rs  message.rs  result.rs  universal_decoder.rs  universal_encoder.rs
stegano-core/src/audio/: lsb_codec.rs  mod.rs
stegano-core/src/carriers/audio/: decoder.rs  encoder.rs  lsb_codec.rs  mod.rs
stegano-core/src/carriers/image/: decoder.rs  encoder.rs  lsb_codec.rs  mod.rs
stegano-core/src/media/: mod.rs
stegano-core/src/media/audio/: decoder.rs  encoder.rs  lsb_codec.rs  mod.rs  wav_iter.rs
stegano-core/src/media/image/: decoder.rs  encoder.rs  iterators.rs  lsb_codec.rs  mod.rs
stegano-core/src/media/payload/: codec.rs  factory.rs  mod.rs
stegano-core/tests/: bit_iterator_spec.rs  ensure_old_formats_work.rs
tests/: bit_iterator_spec.rs  cipher_spec.rs  stegano_spec.rs
webapp/: index.html  package-lock.json  package.json  vite.config.ts
webapp/src/: App.css  App.tsx
webapp/src/components/: SplatViewer.tsx
