[workspace]
resolver = "2"
members = [
    "crates/stegano-cli",
    "crates/stegano-core",
    "crates/stegano-f5",
    "crates/stegano-f5-jpeg-encoder",
    "crates/stegano-f5-jpeg-decoder",
    "crates/stegano-inspect",
    "crates/stegano-seasmoke",
]
[workspace.package]
authors = ["Sven Kanoldt <sven@d34dl0ck.me>"]
edition = "2021"
license = "GPL-3.0-only"
repository = "https://github.com/steganogram/stegano-rs"
homepage = "https://www.stegano.org"

[profile.release]
lto = "fat"

[workspace.dependencies]
env_logger = "0.11"
log = "0.4"
thiserror = "2.0"
tempfile = "3.23"

stegano-core = { path = "crates/stegano-core", version = "0.6.1" }
stegano-f5 = { path = "crates/stegano-f5", version = "0.1" }
stegano-f5-jpeg-encoder = { path = "crates/stegano-f5-jpeg-encoder", version = "0.7" }
stegano-f5-jpeg-decoder = { path = "crates/stegano-f5-jpeg-decoder", version = "0.3" }
stegano-seasmoke = { path = "crates/stegano-seasmoke", version = "0.1" }
