[package]
name = "stegano-cli"
description = "Hiding secret data with steganography in PNG images and WAV audio files"
version = "0.4.1"
authors = ["Sven Assmann <sven.assmann.it@gmail.com>"]
edition = "2018"
license = "GPL-3.0-only"
homepage = "https://www.stegano.org"
readme = "README.md"
keywords = ["steganography", "image", "hiding", "unveil", "commandline"]
categories = ["encoding", "multimedia::encoding", "multimedia::images", "command-line-utilities"]
repository = "https://github.com/steganogram/stegano-rs"
exclude = [".ci/*", ".gitignore", ".travis.yml"]

[badges]
travis-ci = { repository = "steganogram/stegano-rs", branch = "main" }
maintenance = { status = "actively-developed" }

[dependencies]
stegano-core = { path = "../stegano-core" }
#stegano-core = "0.4.1"
clap = "2.33"

[[bin]]
name = "stegano"
path = "src/main.rs"