[package]
name = "stegano-cli"
description = "Hiding secret data with steganography in PNG images and WAV audio files"
version = "0.4.10"
authors = ["Sven Assmann <sven.assmann.it@gmail.com>"]
edition = "2018"
license = "GPL-3.0-only"
homepage = "https://www.stegano.org"
readme = "README.md"
keywords = ["steganography", "image", "hiding", "unveil", "commandline"]
categories = ["encoding", "multimedia::encoding", "multimedia::images", "command-line-utilities"]
repository = "https://github.com/steganogram/stegano-rs"
include = ["src/**/*", "LICENSE", "README.md", "../CHANGELOG.md"]

[badges]
travis-ci = { repository = "steganogram/stegano-rs", branch = "main" }
maintenance = { status = "passively-maintained" }

[dependencies]
stegano-core = { path = "../stegano-core", version = "0.5.0" }
#stegano-core = "0.5.0"
clap = "2.34"

[[bin]]
name = "stegano"
path = "src/main.rs"

[package.metadata.deb]
section = "security"
extended-description = """## Features

- Simple and easy-to-use command line tool
- Cross-platform support (Windows, macOS and Linux)
- Support Media formats like:
  - PNG Images
  - WAV Audio
- Hides one or many files in a carrier media
- Hides one-liner text messages in a carrier media
- Based on [least significant bit steganography][lsb]
- Backwards compatible to [stegano for windows for image en-/decoding][stegano/win]
- Memory safe by design
- Written in [rust](https://www.rust-lang.org/)

"""
