[package]
name = "stegano-core"
description = "Steganography core library for stegano-cli. Supports hiding data in PNG images via LSB Encoding."
version = "0.4.9"
authors = ["Sven Assmann <sven.assmann.it@gmail.com>"]
edition = "2018"
license = "GPL-3.0-only"
homepage = "https://www.stegano.org"
readme = "README.md"
keywords = ["steganography", "image", "png", "hiding", "unveil"]
categories = ["encoding", "multimedia::encoding", "multimedia::images"]
repository = "https://github.com/steganogram/stegano-rs"
include = ["src/**/*", "benches/**/*", "LICENSE", "README.md", "../CHANGELOG.md"]

[badges]
travis-ci = { repository = "steganogram/stegano-rs", branch = "main" }
codecov = { repository = "steganogram/stegano-rs", branch = "main", service = "github" }
maintenance = { status = "actively-developed" }

[dependencies]
image = "0.23.14"
bitstream-io = "1.1.0"
zip = "0.5.13"
bzip2 = "0.4.3"
deflate = "0.9.1"
byteorder = "1.4.3"
hound = "3.4.0"
thiserror = "1.0.26"

[dev-dependencies]
speculate = "0.1.2"
criterion = "0.3.5"
tempfile = "3.2.0"

[lib]
bench = false

[[bench]]
name = "decoder_benchmark"
harness = false

[[bench]]
name = "encoder_benchmark"
harness = false
