[package]
name = "stegano-core"
description = "Steganography core library for stegano-cli. Supports hiding data in PNG images via LSB Encoding."
version = "0.4.10"
authors = ["Sven Assmann <sven.assmann.it@gmail.com>"]
edition = "2018"
license = "GPL-3.0-only"
homepage = "https://www.stegano.org"
readme = "README.md"
keywords = ["steganography", "image", "png", "hiding", "unveil"]
categories = ["encoding", "multimedia::encoding", "multimedia::images"]
repository = "https://github.com/steganogram/stegano-rs"
include = ["src/**/*", "benches/**/*", "LICENSE", "README.md", "../CHANGELOG.md"]

[badges]
travis-ci = { repository = "steganogram/stegano-rs", branch = "main" }
codecov = { repository = "steganogram/stegano-rs", branch = "main", service = "github" }
maintenance = { status = "passively-maintained" }

[dependencies]
image = "0.23"
bitstream-io = "1.0"
zip = "0.5"
bzip2 = "0.4"
deflate = "1.0"
byteorder = "1.4"
hound = "3.4"
thiserror = "1.0"
enum_dispatch = "0.3"

[dev-dependencies]
speculate = "0.1"
criterion = "0.3"
tempfile = "3.2"

[lib]
bench = false

[[bench]]
name = "image_benchmarks"
harness = false

[[bench]]
name = "audio_benchmarks"
harness = false
