[package]
name = "stegano-core"
description = "Steganography core library for stegano-cli. Supports hiding data in PNG images via LSB Encoding."
version = "0.5.0"
authors = ["Sven Assmann <sven.assmann.it@gmail.com>"]
edition = "2021"
license = "GPL-3.0-only"
homepage = "https://www.stegano.org"
readme = "README.md"
keywords = ["steganography", "image", "png", "hiding", "unveil"]
categories = ["encoding", "multimedia::encoding", "multimedia::images"]
repository = "https://github.com/steganogram/stegano-rs"
include = ["src/**/*", "benches/**/*", "LICENSE", "README.md", "../CHANGELOG.md"]

[badges]
travis-ci = { repository = "steganogram/stegano-rs", branch = "main" }
codecov = { repository = "steganogram/stegano-rs", branch = "main", service = "github" }
maintenance = { status = "passively-maintained" }

[dependencies]
image = "0.23"
bitstream-io = "1.3"
zip = "0.6"
bzip2 = "0.4"
deflate = "1.0"
byteorder = "1.4"
hound = "3.4"
thiserror = "1.0"
enum_dispatch = "0.3"

[dev-dependencies]
speculate = "0.1"
criterion = { version = "0.3", features = ["html_reports"] }
tempfile = "3.2"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["prepush-hook", "run-cargo-test", "run-cargo-clippy", "run-cargo-fmt"]

[lib]
bench = false

[[bench]]
name = "image_decoding"
path = "benches/image/decoding.rs"
harness = false

[[bench]]
name = "image_encoding"
path = "benches/image/encoding.rs"
harness = false

[[bench]]
name = "audio_decoding"
path = "benches/audio/decoding.rs"
harness = false

[[bench]]
name = "audio_encoding"
path = "benches/audio/encoding.rs"
harness = false
