[package]
name = "stegano-core"
description = "Steganography core library for stegano-cli. Supports hiding data in PNG images via LSB Encoding."
version = "0.6.0"
authors = ["Sven Kanoldt <sven@d34dl0ck.me>"]
edition = "2021"
license.workspace = true
homepage = "https://www.stegano.org"
readme = "README.md"
keywords = ["steganography", "image", "png", "hiding", "unveil"]
categories = ["encoding", "multimedia::encoding", "multimedia::images"]
repository = "https://github.com/steganogram/stegano-rs"
include = [
    "src/**/*",
    "benches/**/*",
    "LICENSE",
    "README.md",
    "../CHANGELOG.md",
]

[badges]
codecov = { repository = "steganogram/stegano-rs", branch = "main", service = "github" }
maintenance = { status = "passively-maintained" }

[dependencies]
image = { version = "0.24", default-features = false, features = [
    "png",
    "jpeg",
] }
bitstream-io = { version = "2.5" }
zip = { version = "2.2.0", default-features = false, features = ["deflate"] }
byteorder = "1.5"
hound = "3.5"
thiserror = "1.0"
enum_dispatch = "0.3"
env_logger = "0.11"
log = "0.4"

stegano-seasmoke = { version = "0.1", path = "../stegano-seasmoke" }

[dev-dependencies]
speculate = "0.1"
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.12"
coverage-helper = "0.2"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = [
    "prepush-hook",
    "run-cargo-test",
    "run-cargo-clippy",
    "run-cargo-fmt",
]

[lib]
bench = false

[[bench]]
name = "image_decoding"
path = "benches/image/decoding.rs"
harness = false

[[bench]]
name = "image_encoding"
path = "benches/image/encoding.rs"
harness = false

[[bench]]
name = "audio_decoding"
path = "benches/audio/decoding.rs"
harness = false

[[bench]]
name = "audio_encoding"
path = "benches/audio/encoding.rs"
harness = false
