[package]
name = "stegano-core"
description = "Steganography core library for stegano-cli. Supports hiding data in PNG images via LSB Encoding."
version = "0.6.0"
authors = ["Sven Kanoldt <sven@d34dl0ck.me>"]
edition = "2021"
license.workspace = true
homepage = "https://www.stegano.org"
readme = "README.md"
keywords = ["steganography", "image", "png", "hiding", "unveil"]
categories = ["encoding", "multimedia::encoding", "multimedia::images"]
repository = "https://github.com/steganogram/stegano-rs"
include = [
    "src/**/*",
    "benches/**/*",
    "LICENSE",
    "README.md",
    "../../CHANGELOG.md",
]

[badges]
codecov = { repository = "steganogram/stegano-rs", branch = "main", service = "github" }
maintenance = { status = "passively-maintained" }

[dependencies]
image = { version = "0.25", default-features = false, features = [
    "png",
    "jpeg",
] }
bitstream-io = { version = "4.1" }
zip = { version = "4.0", default-features = false, features = ["deflate"] }
byteorder = "1.5"
hound = "3.5"
thiserror.workspace = true
enum_dispatch = "0.3"

log.workspace = true
env_logger.workspace = true

stegano-seasmoke.workspace = true

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }
tempfile = "3.14"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = [
    "prepush-hook",
    "run-cargo-test",
    "run-cargo-clippy",
    "run-cargo-fmt",
]

[features]
default = []
benchmarks = []
