[package]
name = "stegano-f5"
description = "F5 steganography algorithm for JPEG images"
version = "0.1.0"
authors = ["Sven Assmann <sven.assmann.it@gmail.com>"]
edition.workspace = true
license.workspace = true
homepage.workspace = true
keywords = ["steganography", "jpeg", "f5", "dct", "hiding"]
categories = ["encoding", "multimedia::encoding", "multimedia::images"]
repository.workspace = true

[dependencies]
thiserror.workspace = true
fastrand = "2"
log.workspace = true

stegano-f5-jpeg-decoder.workspace = true
stegano-f5-jpeg-encoder.workspace = true

[dev-dependencies]
tempfile.workspace = true
