[package]
name = "stegano-inspect"
description = "little cli for inspecting stegano images"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"
publish = false

[dependencies]
argh = "0.1"
stegano-f5.workspace = true

[dev-dependencies]
itertools = "0.10"
jpeg-decoder = "0.2"
jpeg-encoder = { version = "0.4", features = ["simd", "std"] }

[[bin]]
name = "stegano-inspect"
path = "src/main.rs"
