[package]
name = "stegano-inspect"
description = "Little tool for inspecting stegano images"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"
publish = false

[dependencies]
argh = "0.1"
tabled = "0.17"
stegano-f5.workspace = true
stegano-f5-jpeg-decoder.workspace = true
stegano-f5-jpeg-encoder.workspace = true

[dev-dependencies]
itertools = "0.10"

[[bin]]
name = "stegano-inspect"
path = "src/main.rs"
