[package]
name = "stegano-seasmoke"
version = "0.1.1"
edition = "2021"
description = "Providing cryptography functionality as library for stegano-core"
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
argon2 = { version = "0.5", features = ["std"] }
chacha20poly1305 = { version = "0.10" }
zeroize = "1.8"
thiserror.workspace = true

[build-dependencies]
csbindgen = "1.9"
cbindgen = "0.29"
