[package]
name = "stegano-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
image = { version = "0.25", default-features = false, features = ["png"] }
stegano-core = { path = "../stegano-core", version = "0.6.1" }
getrandom = { version = "0.2", features = ["js"] }



